# NCAA_2026

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
artifacts/: feature_subset_search.json
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
configs/: default.yaml
data/: README.md
runs/: eval_results_20260304_171955.csv  eval_results_20260304_193853.csv  eval_results_20260306_231802.csv  eval_results_20260306_232413.csv  eval_results_20260306_233333.csv  eval_summary_20260304_171955.json  eval_summary_20260304_193853.json  eval_summary_20260306_231802.json  eval_summary_20260306_232413.json  eval_summary_20260306_233333.json
src/ncaa2026/: __init__.py  cli.py  config.py  evaluation.py  feature_subset_search.py  pipeline.py  test_eval.py  tools.py  verify_features.py
src/ncaa2026.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_smoke_cli.py  test_tools_features.py
