[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncaa2026"
version = "0.1.0"
description = "March Machine Learning Mania 2026 ADK starter pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "google-adk>=1.0.0",
  pyyaml>=6.0.3,
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6.0"]

[project.scripts]
ncaa2026 = "ncaa2026.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
